up phpmailer version

--- a/core/composer.json
+++ b/core/composer.json
@@ -53,7 +53,7 @@
     "illuminate/translation": "6.*",
     "illuminate/view": "6.*",
     "league/flysystem": "^1.0.8",
-    "phpmailer/phpmailer": "6.0.6",
+    "phpmailer/phpmailer": "6.*",
     "tracy/tracy": "~2.5",
     "wikimedia/composer-merge-plugin": "dev-master",
     "symfony/process": "^4.3",
