core (fix) add redis session storage

--- a/core/composer.json
+++ b/core/composer.json
@@ -57,7 +57,8 @@
     "tracy/tracy": "~2.5",
     "wikimedia/composer-merge-plugin": "dev-master",
     "symfony/process": "^4.3",
-    "i-rocky/eloquent-dynamic-relation": "^1.0"
+    "i-rocky/eloquent-dynamic-relation": "^1.0",
+    "dmitry-suffi/redis-session-handler": "*"
   },
   "require-dev": {
     "roave/security-advisories": "dev-master"
