--- a/core/custom/routes.php.example
+++ b/core/custom/routes.php.example
@@ -1,4 +1,5 @@
 <?php
+
 use Illuminate\Support\Facades\Route;
 use Illuminate\Support\Facades\Response;
 use Illuminate\Support\Facades\View;
@@ -6,3 +7,7 @@ use Illuminate\Support\Facades\View;
 Route::get('/helloworld', function () {
     return Response::make('Hello World!');
 });
+
+// If you need to wrap the parser with middleware
+// or need grouping, uncomment this line
+// Route::fallbackToParser();
