--- a/core/composer.json
+++ b/core/composer.json
@@ -63,7 +63,8 @@
     "symfony/process": "^5.1",
     "i-rocky/eloquent-dynamic-relation": "^1.0",
     "dmitry-suffi/redis-session-handler": "*",
-    "rosell-dk/webp-convert": "*"
+    "rosell-dk/webp-convert": "*",
+    "predis/predis": "*"
   },
   "require-dev": {
     "roave/security-advisories": "dev-master"
