--- a/core/composer.json
+++ b/core/composer.json
@@ -65,8 +65,8 @@
     "dmitry-suffi/redis-session-handler": "*",
     "rosell-dk/webp-convert": "*",
     "predis/predis": "*",
-    "evolutioncms-services/user-manager": "*",
-    "evolutioncms-services/document-manager": "*"
+    "evolutioncms-services/user-manager": "1.*",
+    "evolutioncms-services/document-manager": "1.*"
   },
   "require-dev": {
     "roave/security-advisories": "dev-master"
