--- a/manager/.htaccess
+++ b/manager/.htaccess
@@ -1,13 +1,12 @@
 # For unexpected logouts in multi-server/cloud environments see:
 # http://rtfm.modx.com/evolution/1.0/administration/friendly-url-solutions 
 
-# No redirect
-RewriteEngine Off
+RewriteEngine On
+RewriteBase /manager/
 
-# Redirect http to https
-# RewriteEngine On
-# RewriteCond %{HTTPS} off
-# RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ index.php [L,QSA]
 
 <IfModule mod_security.c>
 # Turn the filtering engine Off
