--- a/core/composer.json
+++ b/core/composer.json
@@ -68,7 +68,7 @@
     "james-heinrich/phpthumb": "1.*",
     "evolutioncms-services/user-manager": "1.*",
     "evolutioncms-services/document-manager": "1.*",
-    "evolution-cms/salo": "1.x-dev"
+    "evolution-cms/salo": "1.*"
   },
   "require-dev": {
     "roave/security-advisories": "dev-master"
