Revert "Update Laravel components to 9.*"
This reverts commit fc03d29b8ecc6a7748762cd51755170db1f778b8.

--- a/core/composer.json
+++ b/core/composer.json
@@ -40,27 +40,27 @@
     "vlucas/phpdotenv": "^5.2",
     "guzzlehttp/guzzle": "^7.0.1",
     "composer/composer": "*",
-    "illuminate/cache": "9.*",
-    "illuminate/redis": "9.*",
-    "illuminate/config": "9.*",
-    "illuminate/console": "9.*",
-    "illuminate/container": "9.*",
-    "illuminate/database": "9.*",
-    "illuminate/events": "9.*",
-    "illuminate/filesystem": "9.*",
-    "illuminate/log": "9.*",
-    "illuminate/pagination": "9.*",
-    "illuminate/routing": "9.*",
-    "illuminate/support": "9.*",
-    "illuminate/translation": "9.*",
-    "illuminate/view": "9.*",
-    "illuminate/validation": "9.*",
-    "illuminate/http": "9.*",
+    "illuminate/cache": "8.*",
+    "illuminate/redis": "8.*",
+    "illuminate/config": "8.*",
+    "illuminate/console": "8.*",
+    "illuminate/container": "8.*",
+    "illuminate/database": "8.*",
+    "illuminate/events": "8.*",
+    "illuminate/filesystem": "8.*",
+    "illuminate/log": "8.*",
+    "illuminate/pagination": "8.*",
+    "illuminate/routing": "8.*",
+    "illuminate/support": "8.*",
+    "illuminate/translation": "8.*",
+    "illuminate/view": "8.*",
+    "illuminate/validation": "8.*",
+    "illuminate/http": "8.*",
     "league/flysystem": "^1.0.8",
     "phpmailer/phpmailer": "6.*",
     "tracy/tracy": "2.9.*",
     "wikimedia/composer-merge-plugin": "2.*",
-    "symfony/process": "6.*",
+    "symfony/process": "^5.1",
     "dmitry-suffi/redis-session-handler": "*",
     "rosell-dk/webp-convert": "*",
     "predis/predis": "*",
