fix evo.im http to https

--- a/composer.json
+++ b/composer.json
@@ -8,18 +8,18 @@
     "routing",
     "templating"
   ],
-  "homepage": "http://evo.im/",
+  "homepage": "https://evo.im/",
   "license": "GPL-2.0+",
   "authors": [
     {
       "name": "Dmytro Lukianenko",
       "email": "dmi3yy@gmail.com",
-      "homepage": "http://dmi3yy.com",
+      "homepage": "https://dmi3yy.com",
       "role": "Developer"
     }
   ],
   "support": {
-    "docs": "http://docs.evo.im",
+    "docs": "https://docs.evo.im",
     "email": "dmi3yy@evo.im",
     "telegram": "https://t.me/evolutioncms",
     "issues": "https://github.com/evolution-cms/evolution/issues/",
